fix: remove large font size so text is correctly wrapped (#81)

--- a/src/stylesheets/search.scss
+++ b/src/stylesheets/search.scss
@@ -4,7 +4,6 @@
 
 .DocSearch-Hits mark {
   color: var(--color-search-mark-highlight);
-  font-size: large;
 }
 
 .DocSearch-Hit-source {
